# dump

./: .gitignore  CMakeLists.txt  Makefile  README.md
breakneck/: CMakeLists.txt  MakefileExample
breakneck/include/: elevator.h  elevator_bank_panel.h  elevator_scheduler.h
breakneck/src/: driver.cpp  elevator.cpp  elevator_bank_panel.cpp  elevator_scheduler.cpp
c/: CMakeLists.txt  kr01e01.c  kr01e03.c  kr01e04.c  kr01e05.c  kr01e06.c  kr01e07.c  kr01e08.c  kr01e09.c  kr01e10.c  kr01e12.c  kr01e13.c  kr01e14.c  kr01e15.c  kr01e16.c  kr01e17.c  kr01e18.c  kr01e19.c  kr01e20.c  kr01e23.c
cpp/: CMakeLists.txt  bits.cpp  bool_eval.cpp  crtp.cpp  dfs.cpp  hash_map.cpp  hidden.cpp  if_expr.hpp  inherited_messaging.cpp  max_product.cpp  mazes.cpp  monad.cpp  msg.cpp  nqueens.cpp  peano.cpp  permute_string.cpp  phantom.cpp  pimpl.cpp  slicing.cpp  state_machine.cpp  template_method.cpp  type_erasure.cpp  unrepresentable.cpp  virtual_bm.cpp  visitor.cpp  xmacro.cpp
dispatcher/: CMakeLists.txt  dispatcher.cpp  handler_delegate.cpp  increment.proto  system.proto
haskell/: CMakeLists.txt  haskell.cabal  package.yaml
java/: WordGenerator.java
linking/dyn_stat/: add1.c  main.c
linking/preload/: Makefile  main.c  preload.c
linking/redefine/: Makefile  base.cpp  base.h  main.cpp
ocaml/: 99p01.ml  99p02.ml  99p03.ml  99p04.ml  99p05.ml  99p06.ml  99p07.ml  99p08.ml  99p09.ml  99p10.ml  99p11.ml  99p12.ml  99p13.ml  99p14.ml  99p15.ml  99p16.ml  99p17.ml  99p18.ml  99p19.ml  99p20.ml  99p21.ml  99p22.ml  99p31.ml  99p32.ml  99p33.ml  99p34.ml  99p35.ml  99p46.ml  CMakeLists.txt  a_star_vk.ml  battleship.ml  bool_eval.ml  bool_monad.ml  camlisp.ml  coin_counter.ml  dune  fizzbuzz.ml  ioc03.ml  ioc04.ml  ioc05.ml  (+13 more)
python/: collatz.py  falcon_http_server.py  knight_on_keypad.py
random/: awk_embed.bash  build_libae.sh  poor_mans_tools.sh  tricks.mk
scala/: build.sbt  fps.scala
scheme/: sicp01.scm
utils/: axxert.h  field.hpp  scope.hpp  utf8.hpp
