add_executable(kr01e01 kr01e01.c)
add_executable(kr01e03 kr01e03.c)
add_executable(kr01e04 kr01e04.c)
add_executable(kr01e05 kr01e05.c)
add_executable(kr01e06 kr01e06.c)
add_executable(kr01e07 kr01e07.c)
add_executable(kr01e08 kr01e08.c)
add_executable(kr01e09 kr01e09.c)
add_executable(kr01e10 kr01e10.c)
add_executable(kr01e12 kr01e12.c)
add_executable(kr01e13 kr01e13.c)
add_executable(kr01e14 kr01e14.c)
add_executable(kr01e15 kr01e15.c)
add_executable(kr01e16 kr01e16.c)
add_executable(kr01e17 kr01e17.c)
add_executable(kr01e18 kr01e18.c)
add_executable(kr01e19 kr01e19.c)
add_executable(kr01e20 kr01e20.c)
add_executable(kr01e23 kr01e23.c)
