add_executable(bits bits.cpp)
add_executable(bool_eval bool_eval.cpp)
add_executable(crtp crtp.cpp)
add_executable(dfs dfs.cpp)
add_executable(hash_map hash_map.cpp)
add_executable(hidden hidden.cpp)
# add_executable(if_expr if_expr.hpp)
add_executable(inherited_messaging inherited_messaging.cpp)
add_executable(max_product max_product.cpp)
add_executable(mazes mazes.cpp)
add_executable(monad monad.cpp)
add_executable(msg msg.cpp)
add_executable(nqueens nqueens.cpp)
add_executable(peano peano.cpp)
add_executable(permute_string permute_string.cpp)
add_executable(phantom phantom.cpp)
add_executable(pimpl pimpl.cpp)
add_executable(slicing slicing.cpp)
add_executable(state_machine state_machine.cpp)
add_executable(template_method template_method.cpp)
add_executable(type_erasure type_erasure.cpp)
add_executable(unrepresentable unrepresentable.cpp)
add_executable(virtual_bm virtual_bm.cpp)
add_executable(visitor visitor.cpp)
add_executable(xmacro xmacro.cpp)
